# Python-AI-OOB

./: .env  .gitignore  README.md  agentAI.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: run_agent.yml
src/PythonProject.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/agent_core/: agent_runner.py  llm_setup.py
src/utils/: constants.py  logger_setup.py
tests/: conftest.py
tests/integration/: test_agent_first_step.py  test_agent_run.py
tests/unit/: test_llm_setup.py  test_logger_setup.py
